--- a/index.html
+++ b/index.html
@@ -9,34 +9,52 @@
 
     <body>
         <div class="container">
-            <div class="key">
+            <div class="key" data-key="65">
                 <kbd>A</kbd>
+                <div class="sound">Clap</div>
             </div>
-            <div class="key">
+            <div class="key" data-key="83">
                 <kbd>S</kbd>
+                <div class="sound">Hi-Hat</div>
             </div>
-            <div class="key">
+            <div class="key" data-key="68">
                 <kbd>D</kbd>
+                <div class="sound">Kick</div>
             </div>
-            <div class="key">
+            <div class="key" data-key="70">
                 <kbd>F</kbd>
+                <div class="sound">Open-Hat</div>
             </div>
-            <div class="key">
+            <div class="key" data-key="71">
                 <kbd>G</kbd>
+                <div class="sound">Boom</div>
             </div>
-            <div class="key">
+            <div class="key" data-key="72">
                 <kbd>H</kbd>
+                <div class="sound">Ride</div>
             </div>
-            <div class="key">
+            <div class="key" data-key="74">
                 <kbd>J</kbd>
+                <div class="sound">Snare</div>
             </div>
-            <div class="key">
+            <div class="key" data-key="75">
                 <kbd>K</kbd>
+                <div class="sound">Tom</div>
             </div>
-            <div class="key">
+            <div class="key" data-key="76">
                 <kbd>L</kbd>
+                <div class="sound">Tink</div>
             </div>
         </div>
 
+        <audio data-key="65" src="./sounds/clap.wav"></audio>
+        <audio data-key="83" src="./sounds/hihat.wav"></audio>
+        <audio data-key="68" src="./sounds/kick.wav"></audio>
+        <audio data-key="70" src="./sounds/openhat.wav"></audio>
+        <audio data-key="71" src="./sounds/boom.wav"></audio>
+        <audio data-key="72" src="./sounds/ride.wav"></audio>
+        <audio data-key="74" src="./sounds/snare.wav"></audio>
+        <audio data-key="75" src="./sounds/tom.wav"></audio>
+        <audio data-key="76" src="./sounds/tink.wav"></audio>
     </body>
 </html>
