--- a/index.html
+++ b/index.html
@@ -9,52 +9,52 @@
 
     <body>
         <div class="container">
-            <div class="key" data-key="65">
+            <div class="key" data-key="a">
                 <kbd>A</kbd>
                 <div class="sound">Clap</div>
             </div>
-            <div class="key" data-key="83">
+            <div class="key" data-key="s">
                 <kbd>S</kbd>
                 <div class="sound">Hi-Hat</div>
             </div>
-            <div class="key" data-key="68">
+            <div class="key" data-key="d">
                 <kbd>D</kbd>
                 <div class="sound">Kick</div>
             </div>
-            <div class="key" data-key="70">
+            <div class="key" data-key="f">
                 <kbd>F</kbd>
                 <div class="sound">Open-Hat</div>
             </div>
-            <div class="key" data-key="71">
+            <div class="key" data-key="g">
                 <kbd>G</kbd>
                 <div class="sound">Boom</div>
             </div>
-            <div class="key" data-key="72">
+            <div class="key" data-key="h">
                 <kbd>H</kbd>
                 <div class="sound">Ride</div>
             </div>
-            <div class="key" data-key="74">
+            <div class="key" data-key="j">
                 <kbd>J</kbd>
                 <div class="sound">Snare</div>
             </div>
-            <div class="key" data-key="75">
+            <div class="key" data-key="k">
                 <kbd>K</kbd>
                 <div class="sound">Tom</div>
             </div>
-            <div class="key" data-key="76">
+            <div class="key" data-key="l">
                 <kbd>L</kbd>
                 <div class="sound">Tink</div>
             </div>
         </div>
 
-        <audio data-key="65" src="./sounds/clap.wav"></audio>
-        <audio data-key="83" src="./sounds/hihat.wav"></audio>
-        <audio data-key="68" src="./sounds/kick.wav"></audio>
-        <audio data-key="70" src="./sounds/openhat.wav"></audio>
-        <audio data-key="71" src="./sounds/boom.wav"></audio>
-        <audio data-key="72" src="./sounds/ride.wav"></audio>
-        <audio data-key="74" src="./sounds/snare.wav"></audio>
-        <audio data-key="75" src="./sounds/tom.wav"></audio>
-        <audio data-key="76" src="./sounds/tink.wav"></audio>
+        <audio data-key="a" src="./sounds/clap.wav"></audio>
+        <audio data-key="s" src="./sounds/hihat.wav"></audio>
+        <audio data-key="d" src="./sounds/kick.wav"></audio>
+        <audio data-key="f" src="./sounds/openhat.wav"></audio>
+        <audio data-key="g" src="./sounds/boom.wav"></audio>
+        <audio data-key="h" src="./sounds/ride.wav"></audio>
+        <audio data-key="j" src="./sounds/snare.wav"></audio>
+        <audio data-key="k" src="./sounds/tom.wav"></audio>
+        <audio data-key="l" src="./sounds/tink.wav"></audio>
     </body>
 </html>
